# utility-cpp11

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  all_build.sh  msvc_all_build.ps1
.github/workflows/: ci.yml
include/utility_cpp11/: utility.hpp
test/in_place/: in_place.t.cpp
test/intseq.general/: integer_seq.t.cpp
test/intseq.intseq/: integer_seq.compile.fail.cpp  integer_seq.t.cpp
test/intseq.make/: make_integer_seq.compile.fail.cpp  make_integer_seq.t.cpp
test/utility.as_const/: as_const.compile.fail.cpp  as_const.t.cpp
test/utility.exchange/: exchange.t.cpp
test/utility.intcmp/: intcmp.t.cpp
